--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "eslint:fix": "eslint src --fix",
     "prettier": "prettier src --check",
     "prettier:fix": "prettier src --write",
+    "jest": "jest --config=jest.config.js",
+    "jest:coverage": "jest --config=jest.config.js --coverage",
     "lint": "npm run eslint && npm run prettier",
-    "lint:fix": "npm run eslint:fix && npm run prettier:fix"
+    "lint:fix": "npm run eslint:fix && npm run prettier:fix",
+    "test": "npm run jest",
+    "test:coverage": "npm run jest:coverage"
   },
   "repository": {
     "type": "git",
@@ -32,6 +36,7 @@
     "@eslint/compat": "^1.2.6",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.20.0",
+    "@types/jest": "^29.5.14",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
     "eslint": "^9.20.1",
@@ -39,7 +44,9 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.3",
     "globals": "^15.15.0",
+    "jest": "^29.7.0",
     "prettier": "^3.5.1",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0"
   }
