--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "Modern redux store jest mock helper function for testing reducers using @reduxjs/toolkit slices.",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "scripts": {
     "eslint": "eslint src",
     "eslint:fix": "eslint src --fix",
@@ -10,10 +12,12 @@
     "prettier:fix": "prettier src --write",
     "jest": "jest --config=jest.config.js",
     "jest:coverage": "jest --config=jest.config.js --coverage",
+    "tsup": "tsup src/index.ts --format cjs,esm --dts",
     "lint": "npm run eslint && npm run prettier",
     "lint:fix": "npm run eslint:fix && npm run prettier:fix",
     "test": "npm run jest",
-    "test:coverage": "npm run jest:coverage"
+    "test:coverage": "npm run jest:coverage",
+    "build": "npm run tsup"
   },
   "repository": {
     "type": "git",
@@ -47,6 +51,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.5.1",
     "ts-jest": "^29.2.5",
+    "tsup": "^8.3.6",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0"
   }
