--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
     "tsup": "^8.3.6",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0"
+  },
+  "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1"
   }
 }
