--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ run-name: ${{ github.actor }} is running publish workflow
 on:
   release:
     types: [published]
-concurrency: ${{ github.workflow }}-${{ github.ref}}
+concurrency: ${{ github.workflow }}-${{ github.ref }}
 jobs:
   publish-npm:
     name: Publish to npm
@@ -41,6 +41,7 @@ jobs:
         with:
           node-version: '22.11.0'
           registry-url: 'https://npm.pkg.github.com'
+          scope: '@${{ github.repository_owner }}'
       - name: Install dependencies
         run: npm ci
       - name: Build
